codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__task_list_panel__tests__task_list_panel_compact_multi_current.snap
---
source: tui/src/chatwidget/task_list_panel_tests.rs
expression: "render_panel(&panel, 48, 6, 0)"
---
Tasks 2/7 · 2 hidden · ⌥p expand
↑↑ ✔ Task 1
   □ Task 2
   □ Task 3
   □ Task 4
↓↓ □ Task 5
