codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__task_list_panel__tests__task_list_panel_compact_narrow_reserved.snap
---
source: tui/src/chatwidget/task_list_panel_tests.rs
expression: "render_panel(&panel, 20, 2, 4)"
---
Tasks 0/1
   □ A task wit…
