codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__task_list_panel__tests__task_list_panel_completed_running.snap
---
source: tui/src/chatwidget/task_list_panel_tests.rs
expression: "render_panel(&panel, 40, 3, 0)"
---
Tasks 2/2 · ⌥ + p expand
   ✔ Task 0
   ✔ Task 1
