codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__task_list_panel__tests__task_list_panel_expanded_constrained.snap
---
source: tui/src/chatwidget/task_list_panel_tests.rs
expression: "render_panel(&panel, 24, 3, 0)"
---
Tasks 3/6 · 5 hidden
↑↓ □ Current task wraps
     across several
