codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__task_list_panel__tests__task_list_panel_one_row_both_directions.snap
---
source: tui/src/chatwidget/task_list_panel_tests.rs
expression: "render_panel(&panel, 32, 2, 0)"
---
Tasks 3/7 · 6 hidden · ⌥p expand
↑↓ □ Task 3
